# molprop-platform

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.html  quickstart.html
docs/tools/: index.html
src/molprop_platform/: __init__.py
src/molprop_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/molprop_platform/bioisostere/: cli.py
src/molprop_platform/core/: io.py
src/molprop_platform/lookup/: cli.py
src/molprop_platform/mmp/: cli.py
src/molprop_platform/pareto/: cli.py
src/molprop_platform/sar/: cli.py
src/molprop_platform/viz/: cli.py
src/molprop_platform/web/: app.py  cli.py  runner.py
src/molscope/: commands.py  toolkit.py
src/molscope/bioisostere/: cli.py
src/molscope/core/: __init__.py  io.py
src/molscope/lookup/: cli.py
src/molscope/mmp/: cli.py
src/molscope/sar/: cli.py
src/molscope/web/: app.py  cli.py  runner.py
tests/: test_smoke.py
