[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molscope"
version = "1.1.0"
description = "MolScope server workspace for MolScope toolkit workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Khaled Elokely"}]
keywords = ["cheminformatics", "medchem", "rdkit", "admet", "drug-discovery"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

# Keep base install intentionally light.
dependencies = [
  "molprop-toolkit @ git+https://github.com/kelokely/-molprop-toolkit.git",
  "pandas>=1.5",
]

[project.optional-dependencies]
web = [
  "streamlit>=1.31",
]

viz = [
  "numpy>=1.21",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "umap-learn>=0.5.5",
]

lookup = [
  "requests>=2.31",
  "requests-cache>=1.2",
]

dev = [
  "pytest>=7",
  "ruff>=0.1",
  "black>=23",
]

[project.scripts]
molscope-visualize = "molscope.viz.cli:main"
molscope-server = "molscope.web.cli:main"
molscope-mmp = "molscope.mmp.cli:main"
molscope-sar = "molscope.sar.cli:main"

[project.urls]
Homepage = "https://kelokely.github.io/molprop-platform/"
Repository = "https://github.com/kelokely/molprop-platform"
Documentation = "https://kelokely.github.io/molprop-platform/"
Issues = "https://github.com/kelokely/molprop-platform/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["molscope*"]

[tool.setuptools.package-data]
"molscope.resources" = ["*.pkl.gz"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 88
